ready for release 1.0.0

--- a/index.html
+++ b/index.html
@@ -1,13 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta
+      name="keywords"
+      content="Software Developer, web, developer, web app, daniel rangel, freelancer, portfolio, dev portfolio"
+    />
+    <meta
+      name="description"
+      content="Come take a look at my software development projects"
+    />
+    <meta name="robots" content="index,follow" />
+    <meta name="url" content="https://danielrangel.net" />
+    <meta name="identifier-URL" content="https://danielrangel.net" />
+
+    <!--Change this-->
+    <meta name="directory" content="submission" />
+    <meta name="category" content="Web App" />
+    <meta name="coverage" content="Worldwide" />
+    <meta name="rating" content="General" />
+
+    <!-- OG TAGS -->
+    <meta
+      name="og:title"
+      content="Daniel Rangel | Software Artist | My Personal Portfolio"
+    />
+    <meta property="og:url" content="https://danielrangel.net" />
+
+    <!--Change this-->
+    <meta
+      property="og:image"
+      content="https://danielrangel.net/images/full_logo.png"
+    />
+    <!--Change this-->
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:description"
+      content="Come take a look at my software development projects"
+    />
+    <meta property="og:locale" content="en_GB" />
+    <meta name="og:site_name" content="Daniel Rangel | Software Artist | My Personal Portfolio" />
+
+    <!--Change this-->
+    <meta name="og:region" content="TN" />
+
+    <!--Change this-->
+    <meta name="og:postal-code" content="37777" />
+
+    <!--Change this-->
+    <meta name="og:country-name" content="USA" />
+
+    <!--Change this-->
+    <!-- BLOG CATALOG -->
+    <meta name="blogcatalog" />
+
+    <!--Twitter Tags-->
+    <meta
+      name="twitter:title"
+      content="Daniel Rangel | Software Artist | My Personal Portfolio"
+    />
+    <meta
+      name="twitter:description"
+      content="Come take a look at my software development projects"
+    />
+    <meta
+      name="twitter:image"
+      content="https://danielrangel.net/images/full_logo.png"
+    />
+    <meta name="twitter:site" content="https://danielrangel.net" />
+    <meta name="twitter:creator" content="@Yodarango" />
+
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0 maximum-scale=1"
+    />
+
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="/global.css" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Svelte + Vite App</title>
+    <title>Daniel Rangel | Software Artist | My Personal Portfolio</title>
   </head>
-  <body style="">
+  <body >
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
